--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,14 +10,44 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_open_notes"
+        android:id="@+id/action_open_androidkozlov"
         android:orderInCategory="100"
-        android:title="Записная книжка"
+        android:title="1.1 AndroidKozlov"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_spinner"
+        android:id="@+id/action_open_helloworld"
+        android:orderInCategory="100"
+        android:title="1.2.1 HelloWorld"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_open_viewphoto"
+        android:orderInCategory="100"
+        android:title="1.2.2 ViewPhoto"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_open_checkbox"
+        android:orderInCategory="100"
+        android:title="2.1.1 CheckBox"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_open_spinner"
         android:orderInCategory="100"
         android:title="2.1.2 Spinner"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_open_calendarview"
+        android:orderInCategory="100"
+        android:title="2.1.3 CalendarView"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_open_notes"
+        android:orderInCategory="100"
+        android:title="Записная книжка"
         app:showAsAction="never" />
 </menu>
